Name:                HNessDB
version:             0.1.0.0
Stability:           Experimental
synopsis:            Haskell binding for NessDB
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              ZhaoBR
maintainer:          zhaobr@gmail.com
-- copyright:           
category:            Database
build-type:          Simple
cabal-version:       >=1.8

--extra-source-files:
--    README

flag build-example
  default:           False

library
  exposed-modules:   Database.NessDB
  other-modules:     Database.NessDB.Impl
  build-depends:     base >= 2 && < 5 

  ghc-options:      -Wall 

Executable nessdb-example 
  Hs-source-dirs:      example
  Main-is:             Main.hs 
  Build-depends:       base >= 2 && < 5
                     , HNessDB
  extra-libraries:     nessdb
  if !flag(build-example)
    Buildable:         False

